# lilserver

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/routes/: health.rs  hello.rs  mod.rs
tests/api/: health.rs  helpers.rs
