[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
axum = "0.7"
once_cell = "1.18"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version ="0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
reqwest = "0.11.20"
